# nasy_tg_bot

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json  typ.py
bots/: __init__.py  arknight_rss.py
