[tool]
[tool.pdm]
name = "nasy_tg_bot"
version = "0.0.1"
description = ""
author = "Nasy <nasyxx+python@gmail.com>"
license = "GPLv3"
homepage = ""
python_requires = ">=3.9"

[tool.pdm.dependencies]
tomlkit = "<1.0.0,>=0.7.0"
pyrogram = "<2.0.0,>=1.0.7"
httpx = "<1.0.0,>=0.16.1"
aiocron = "<2.0.0,>=1.3"
loguru = "<1.0.0,>=0.5.3"

[tool.pdm.dev-dependencies]

[tool.black]
line-length = 79

[build-system]
requires = ["pdm"]
build-backend = "pdm.pep517.api"
