[tool.black]
line-length = 79

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Nasy", email = "nasyxx+python@gmail.com"},
]
version = "0.0.2"
dynamic = ["classifiers"]
requires-python = ">=3.9"
license = {text = "GPLv3"}
dependencies = [
    "tomlkit",
    "pyrogram",
    "httpx",
    "aiocron",
    "loguru",
    "defusedxml",
]
name = "nasy_tg_bot"
description = ""

[project.urls]
homepage = ""

[project.optional-dependencies]
